<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/addTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="Modifier"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTextView"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="16dp"
        android:minLines="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/save_button"
        android:src="@drawable/ic_ok" />

    <TextView
        android:id="@+id/addText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/saveButton"
        android:layout_centerHorizontal="true"
        android:text="@drawable/ic_add"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back_arrow" />

    <View
        android:id="@+id/statusColorView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>
